--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <title>React App</title>
+  <title>Movies App</title>
 </head>
 
 <body>
